update-mentalPattern-english fix

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -401,8 +401,8 @@
   "anima.ui.psychic.psychicPowers.discipline.matrixPowers.title": "-",
   "anima.ui.psychic.psychicPowers.mentalPattern.introversion.title": "Introversion",
   "anima.ui.psychic.psychicPowers.mentalPattern.extroversion.title": "Extroversion",
-  "anima.ui.psychic.psychicPowers.mentalPattern.craziness.title": "Craziness",
-  "anima.ui.psychic.psychicPowers.mentalPattern.psychopathy.title": "Psychopathy",
+  "anima.ui.psychic.psychicPowers.mentalPattern.madness.title": "Madness",
+  "anima.ui.psychic.psychicPowers.mentalPattern.psychopath.title": "Psychopath",
   "anima.ui.psychic.psychicPowers.mentalPattern.compassion.title": "Compassion",
   "anima.ui.psychic.psychicPowers.mentalPattern.cowardice.title": "Cowardice",
   "anima.ui.psychic.psychicPowers.mentalPattern.courage.title": "Courage",
