--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -401,8 +401,8 @@
   "anima.ui.psychic.psychicPowers.discipline.matrixPowers.title": "-",
   "anima.ui.psychic.psychicPowers.mentalPattern.introversion.title": "Introversión",
   "anima.ui.psychic.psychicPowers.mentalPattern.extroversion.title": "Extroversión",
-  "anima.ui.psychic.psychicPowers.mentalPattern.craziness.title": "Locura",
-  "anima.ui.psychic.psychicPowers.mentalPattern.psychopathy.title": "Psicopatía",
+  "anima.ui.psychic.psychicPowers.mentalPattern.madness.title": "Locura",
+  "anima.ui.psychic.psychicPowers.mentalPattern.psychopath.title": "Psicopatía",
   "anima.ui.psychic.psychicPowers.mentalPattern.compassion.title": "Compasión",
   "anima.ui.psychic.psychicPowers.mentalPattern.cowardice.title": "Cobardía",
   "anima.ui.psychic.psychicPowers.mentalPattern.courage.title": "Valentía",
