WIP: spells tab with svelte
Error: updating fields from the spells is not permanent
Error: contextual menue not working

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -485,6 +485,7 @@
   "contextualMenu.common.options.edit": "Edit",
   "contextualMenu.elan.options.addPower": "Add power",
   "contextualMenu.elan.options.deletePower": "Delete power",
+  "dialogs.select.custom": "[Custom]",
   "dialogs.accept": "Accept",
   "dialogs.cancel": "Cancel",
   "dialogs.continue": "Continue",
