--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -525,6 +525,12 @@
   "anima.ui.systemSettings.useCombatTable.hint.title": "Calcular daño usando la Tabla de combate que aparece en el Core Exxet pg. 334-335",
   "anima.ui.systemSettings.useDistanceAutomation.title": "Automatizar distancia en el combate",
   "anima.ui.systemSettings.useDistanceAutomation.hint.title": "Calcula la distancia entre el atacante y el defensor para agregar de forma automática los modificadores correspondiente al combate a distancia",
+  "anima.ui.systemSettings.prefixAttackMacro.title": "Prefijo de las Macros de Ataque en el Combate",
+  "anima.ui.systemSettings.prefixAttackMacro.hint.title": "Si queda vacío tomara el nombre del arma como nombre de Macro en el Combate, de lo contrario será el Prefijo + Nombre del arma",
+  "anima.ui.systemSettings.defaultProjectileMacro.title": "Macro por defecto para Proyectiles",
+  "anima.ui.systemSettings.defaultProjectileMacro.hint.title": "En caso de que el arma sea un projectil de disparo tomará el nombre del Macro que se ingrese aquí para el Combate",
+  "anima.ui.systemSettings.missValueAttackMacro.title": "Valor de Fallo al Atacar para la Animación",
+  "anima.ui.systemSettings.missValueAttackMacro.hint.title": "Al momento de ejecutar un macro en el combate se envía un argumento de fallo, si el valor de la HA es menor que el valor de Fallo y el defensor ganó el combate se considera que falló el ataque (se usa en animaciones)",
   "anima.ui.tabs.combat": "Combate",
   "anima.ui.tabs.damageResistance": "Acumulación",
   "anima.ui.tabs.domine": "Domine",
