--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -524,6 +524,12 @@
   "anima.ui.systemSettings.useCombatTable.hint.title": "Calculate damage with the Combat Table explained in Core Exxet pg. 334-335",
   "anima.ui.systemSettings.useDistanceAutomation.title": "Automate combat distance",
   "anima.ui.systemSettings.useDistanceAutomation.hint.title": "Calculates the distance between the attacker and defender to automatically add modifiers for ranged combat",
+  "anima.ui.systemSettings.prefixAttackMacro.title": "Prefix of Attack Macros in Combat",
+  "anima.ui.systemSettings.prefixAttackMacro.hint.title": "If empty, it will take the name of the weapon as the Macro name in Combat, otherwise it will be the Prefix + Name of the weapon",
+  "anima.ui.systemSettings.defaultProjectileMacro.title": "Default Macro for Projectiles",
+  "anima.ui.systemSettings.defaultProjectileMacro.hint.title": "If the weapon is a shooting projectile, it will take the name of the Macro that is entered here for the Combat",
+  "anima.ui.systemSettings.missValueAttackMacro.title": "Attack Failure Value for Animations",
+  "anima.ui.systemSettings.missValueAttackMacro.hint.title": "When executing a macro in combat, a failure argument is sent; if the HA value is less than the Failure value and the defender won the combat, it is considered that the attack failed (used in animations)",
   "anima.ui.tabs.combat": "Combat",
   "anima.ui.tabs.damageResistance": "Damage Resistance",
   "anima.ui.tabs.domine": "Domine",
