--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -536,6 +536,11 @@
   "anima.ui.effects.effectsList.disable.title": "Disable",
   "anima.ui.effects.effectsList.edit.title": "Edit",
   "anima.ui.effects.effectsList.delete.title": "Delete",
+  "anima.ui.effects.painModifiers.title": "Pain Modifiers",
+  "anima.ui.effects.painModifiers.fatigue.title": "Fatigue",
+  "anima.ui.effects.painModifiers.physical.title": "Physical",
+  "anima.ui.effects.painModifiers.incapacitation.title": "Incapacitation",
+  "anima.ui.effects.painModifiers.withstandPain.title": "Withstand Pain",
   "anima.ui.tabs.combat": "Combat",
   "anima.ui.tabs.damageResistance": "Damage Resistance",
   "anima.ui.tabs.domine": "Domine",
