--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -537,6 +537,11 @@
   "anima.ui.effects.effectsList.disable.title": "Desactivar",
   "anima.ui.effects.effectsList.edit.title": "Editar",
   "anima.ui.effects.effectsList.delete.title": "Eliminar",
+  "anima.ui.effects.painModifiers.title": "Modificadores del Dolor",
+  "anima.ui.effects.painModifiers.fatigue.title": "Cansancio",
+  "anima.ui.effects.painModifiers.physical.title": "Físico",
+  "anima.ui.effects.painModifiers.incapacitation.title": "Incapacitación",
+  "anima.ui.effects.painModifiers.withstandPain.title": "Resistir el Dolor",
   "anima.ui.tabs.combat": "Combate",
   "anima.ui.tabs.damageResistance": "Acumulación",
   "anima.ui.tabs.domine": "Domine",
