replace visuals-effects for status

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -531,17 +531,17 @@
   "anima.ui.systemSettings.defaultProjectileMacro.hint.title": "En caso de que el arma sea un projectil de disparo tomará el nombre del Macro que se ingrese aquí para el Combate",
   "anima.ui.systemSettings.missValueAttackMacro.title": "Valor de Fallo al Atacar para la Animación",
   "anima.ui.systemSettings.missValueAttackMacro.hint.title": "Al momento de ejecutar un macro en el combate se envía un argumento de fallo, si el valor de la HA es menor que el valor de Fallo y el defensor ganó el combate se considera que falló el ataque (se usa en animaciones)",
-  "anima.ui.effects.effectsList.title": "Efectos",
-  "anima.ui.effects.effectsList.name.title": "Efecto",
-  "anima.ui.effects.effectsList.enable.title": "Activar",
-  "anima.ui.effects.effectsList.disable.title": "Desactivar",
-  "anima.ui.effects.effectsList.edit.title": "Editar",
-  "anima.ui.effects.effectsList.delete.title": "Eliminar",
-  "anima.ui.effects.painModifiers.title": "Modificadores del Dolor",
-  "anima.ui.effects.painModifiers.fatigue.title": "Cansancio",
-  "anima.ui.effects.painModifiers.physical.title": "Físico",
-  "anima.ui.effects.painModifiers.incapacitation.title": "Incapacitación",
-  "anima.ui.effects.painModifiers.withstandPain.title": "Resistir el Dolor",
+  "anima.ui.status.effectsList.title": "Efectos",
+  "anima.ui.status.effectsList.name.title": "Efecto",
+  "anima.ui.status.effectsList.enable.title": "Activar",
+  "anima.ui.status.effectsList.disable.title": "Desactivar",
+  "anima.ui.status.effectsList.edit.title": "Editar",
+  "anima.ui.status.effectsList.delete.title": "Eliminar",
+  "anima.ui.status.painModifiers.title": "Modificadores del Dolor",
+  "anima.ui.status.painModifiers.fatigue.title": "Cansancio",
+  "anima.ui.status.painModifiers.physical.title": "Físico",
+  "anima.ui.status.painModifiers.incapacitation.title": "Incapacitación",
+  "anima.ui.status.painModifiers.withstandPain.title": "Resistir el Dolor",
   "anima.ui.tabs.combat": "Combate",
   "anima.ui.tabs.damageResistance": "Acumulación",
   "anima.ui.tabs.domine": "Domine",
@@ -550,7 +550,7 @@
   "anima.ui.tabs.psychic": "Psíquico",
   "anima.ui.tabs.secondaries": "Secundarias",
   "anima.ui.titleSection.title": "Títulos",
-  "anima.ui.tabs.effects": "Efectos",
+  "anima.ui.tabs.status": "Estados",
   "anima.ui.weapons.different.title": "Diferente / Desarmado",
   "anima.ui.weapons.known.title": "Conocida",
   "anima.ui.weapons.mixed.title": "Mixta",
