replace visuals-effects for status

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -542,12 +542,17 @@
   "anima.ui.systemSettings.defaultShieldMacro.hint.title": "If no Macros are found, it will take the name of the Macro that is entered here for supernatural shields",
   "anima.ui.systemSettings.missValueAttackMacro.title": "Attack Failure Value for Animations",
   "anima.ui.systemSettings.missValueAttackMacro.hint.title": "When executing a macro in combat, a failure argument is sent; if the HA value is less than the Failure value and the defender won the combat, it is considered that the attack failed (used in animations)",
-  "anima.ui.effects.effectsList.title": "Effects",
-  "anima.ui.effects.effectsList.name.title": "Effect",
-  "anima.ui.effects.effectsList.enable.title": "Enable",
-  "anima.ui.effects.effectsList.disable.title": "Disable",
-  "anima.ui.effects.effectsList.edit.title": "Edit",
-  "anima.ui.effects.effectsList.delete.title": "Delete",
+  "anima.ui.status.effectsList.title": "Effects",
+  "anima.ui.status.effectsList.name.title": "Effect",
+  "anima.ui.status.effectsList.enable.title": "Enable",
+  "anima.ui.status.effectsList.disable.title": "Disable",
+  "anima.ui.status.effectsList.edit.title": "Edit",
+  "anima.ui.status.effectsList.delete.title": "Delete",
+  "anima.ui.status.painModifiers.title": "Pain Modifiers",
+  "anima.ui.status.painModifiers.fatigue.title": "Fatigue",
+  "anima.ui.status.painModifiers.physical.title": "Physical",
+  "anima.ui.status.painModifiers.incapacitation.title": "Incapacitation",
+  "anima.ui.status.painModifiers.withstandPain.title": "Withstand Pain",
   "anima.ui.tabs.combat": "Combat",
   "anima.ui.tabs.damageResistance": "Damage Resistance",
   "anima.ui.tabs.domine": "Domine",
@@ -555,7 +560,7 @@
   "anima.ui.tabs.mystic": "Mystic",
   "anima.ui.tabs.psychic": "Psychic",
   "anima.ui.tabs.secondaries": "Secondaries",
-  "anima.ui.tabs.effects": "Effects",
+  "anima.ui.tabs.status": "Status",
   "anima.ui.titleSection.title": "Titles",
   "anima.ui.weapons.different.title": "Different / Unarmed",
   "anima.ui.weapons.known.title": "Known",
