--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -632,6 +632,7 @@
   "dialogs.spellCasting.warning.innateMagic": "You don't have enough Innate Magic",
   "dialogs.spellCasting.warning.preparedSpell": "You do not have this Spell Prepared",
   "dialogs.spellCasting.warning.zeonAccumulated": "You don't have enough Accumulated Zeon",
+  "dialogs.specificAttack.warning.disableMustChoose": "You must choose a Targeted Attack",
   "macros.combat.dialog.applyAndCloseButton.title": "Apply and close",
   "anima.ui.systemSettings.autoAcceptCombatRequests.title": "Auto accept combat requests",
   "anima.ui.systemSettings.autoAcceptCombatRequests.hint.title": "Combat requests sent to GM will be auto accepted depending if this option is active",
@@ -769,7 +770,7 @@
   "macros.combat.dialog.warning.supernaturalShieldNotFound.mystic": "You do not have any active mystic shields, click on New Shield",
   "macros.combat.dialog.warning.supernaturalShieldNotFound.psychic": "You do not have any active psychic shields, click on New Shield",
   "macros.combat.dialog.hasCritic.title": "Perform a critical attack on {target}",
-  "macros.combat.dialog.targetedAttack.title": "Ataque apuntado",
+  "macros.combat.dialog.targetedAttack.title": "Targeted attack",
   "macros.combat.dialog.targetedAttack.none.title": "-",
   "macros.combat.dialog.targetedAttack.neck.title": "Neck",
   "macros.combat.dialog.targetedAttack.head.title": "Head",
