fix-localization combat Modifiers

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -665,6 +665,12 @@
   "macros.combat.dialog.combatMod.secondaryCritic.title": "Usar crítico secundario",
   "macros.combat.dialog.combatMod.multipleDefensesPenalty.title": "Penalizador por defensa continua",
   "macros.combat.dialog.combatMod.fatigueUsed.title": "Fatiga usada",
+  "macros.combat.dialog.combatMod.knockDown.title": "Derribo",
+  "macros.combat.dialog.combatMod.knockDownSmallWeapon.title": "Derribo con arma pequeña",
+  "macros.combat.dialog.combatMod.disarm.title": "Desarmar",
+  "macros.combat.dialog.combatMod.immobilize.title": "Presa",
+  "macros.combat.dialog.combatMod.knockOut.title": "Inconsciencia",
+  "macros.combat.dialog.combatMod.targeted.title": "Ataque apuntado",
   "macros.combat.dialog.counterAttackBonus.title": "Bono al contraataque",
   "macros.combat.dialog.counterAttackButton.title": "Contraatacar",
   "macros.combat.dialog.rollResistanceButton.title": "Tirada de Resistancia",
