--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -667,6 +667,12 @@
   "macros.combat.dialog.combatMod.secondaryCritic.title": "Secondary critic used",
   "macros.combat.dialog.combatMod.multipleDefensesPenalty.title": "Defense penalty",
   "macros.combat.dialog.combatMod.fatigueUsed.title": "Used fatigue",
+  "macros.combat.dialog.combatMod.knockDown.title": "KnockDown",
+  "macros.combat.dialog.combatMod.knockDownSmallWeapon.title": "KnockDown with small weapon",
+  "macros.combat.dialog.combatMod.disarm.title": "Disarm",
+  "macros.combat.dialog.combatMod.immobilize.title": "Immobilize",
+  "macros.combat.dialog.combatMod.knockOut.title": "KnockOut",
+  "macros.combat.dialog.combatMod.targeted.title": "Targeted attack",
   "macros.combat.dialog.counterAttackBonus.title": "Counterattack bonus",
   "macros.combat.dialog.counterAttackButton.title": "Counterattack",
   "macros.combat.dialog.rollResistanceButton.title": "Roll Resistance",
