new - Combat Surprised automated

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -671,6 +671,7 @@
   "macros.combat.dialog.combatMod.immobilize.title": "Presa",
   "macros.combat.dialog.combatMod.knockOut.title": "Inconsciencia",
   "macros.combat.dialog.combatMod.targeted.title": "Ataque apuntado",
+  "macros.combat.dialog.combatMod.surprised.title": "Sorprendido",
   "macros.combat.dialog.counterAttackBonus.title": "Bono al contraataque",
   "macros.combat.dialog.counterAttackButton.title": "Contraatacar",
   "macros.combat.dialog.rollResistanceButton.title": "Tirada de Resistancia",
