--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -673,6 +673,7 @@
   "macros.combat.dialog.combatMod.immobilize.title": "Immobilize",
   "macros.combat.dialog.combatMod.knockOut.title": "KnockOut",
   "macros.combat.dialog.combatMod.targeted.title": "Targeted attack",
+  "macros.combat.dialog.combatMod.surprised.title": "Surprised",
   "macros.combat.dialog.counterAttackBonus.title": "Counterattack bonus",
   "macros.combat.dialog.counterAttackButton.title": "Counterattack",
   "macros.combat.dialog.rollResistanceButton.title": "Roll Resistance",
