new-resistanceRoll socket

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -680,6 +680,7 @@
   "macros.combat.dialog.damage.title": "Damage",
   "macros.combat.dialog.psychic.damageModifier.title": "Damage modifier",
   "macros.combat.dialog.damageDeal.title": "Damage deal",
+  "macros.combat.dialog.resistanceRoll.title": "Resistance Roll",
   "macros.combat.dialog.defend.title": "Defense",
   "macros.combat.dialog.defender.title": "Defender",
   "macros.combat.dialog.defenderCustomModifier.title": "Defender custom modifier",
@@ -695,6 +696,11 @@
   "macros.combat.dialog.difference.title": "Difference",
   "macros.combat.dialog.dodgeButton.title": "Try to dodge",
   "macros.combat.dialog.dodgeValue.title": "Dodge value",
+  "macros.combat.dialog.rolling.title": "Roll Check",
+  "macros.combat.dialog.rollValue.title": "Base Value",
+  "macros.combat.dialog.rollSent.title": "Roll sent. Waiting for combat results...",
+  "macros.combat.dialog.rollButton.title": "Roll",
+  "macros.combat.dialog.waitingRollRequest.title": "Roll request sent. Waiting for roll results...",
   "macros.combat.dialog.error.alreadyInCombat.title": "Your attack request have being rejected because GM is already involved in a combat. Wait your turn and try again.",
   "macros.combat.dialog.error.cannotAttackYourself.title": "Cannot attack yourself",
   "macros.combat.dialog.error.multipleTargets.title": "Only can select one target",
@@ -733,7 +739,8 @@
   "macros.combat.dialog.physicalAttack.unarmed.title": "Try to hit, unarmed, to {target}",
   "macros.combat.dialog.physicalDefense.block.title": "Try to block the attack from {target}",
   "macros.combat.dialog.physicalDefense.dodge.title": "Try to dodge the attack from {target}",
-  "macros.combat.dialog.physicalDefense.resist.title": "Try to resist the attack from {target}",
+  "macros.combat.dialog.physicalDefense.resist.title": "Try to resist a check of {check}",
+  "macros.combat.dialog.physicalDefense.characteristic.title": "Is facing {target}",
   "macros.combat.dialog.psychicAttack.title": "Attacks with the mental power {power} to {target} with {potential} potential",
   "macros.combat.dialog.psychicDefense.title": "Defends with the mental power {power} from {target}",
   "macros.combat.dialog.psychicPotential.title": "Psychic potential",
