new-resistanceRoll socket

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -649,7 +649,7 @@
   "macros.combat.dialog.attackerCustomModifier.title": "Modificador personalizado del ataque",
   "macros.combat.dialog.attacking.title": "Atacando a ",
   "macros.combat.dialog.blockButton.title": "Intentar bloquear",
-  "macros.combat.dialog.blockValue.title": "Valor de bloqueo",
+  "macros.combat.dialog.blockValue.title": "Defensa",
   "macros.combat.dialog.cancelButton.title": "Cancelar",
   "macros.combat.dialog.combatMod.modifier.title": "Modificador",
   "macros.combat.dialog.combatMod.blindness.title": "Ceguera absoluta",
@@ -687,6 +687,7 @@
   "macros.combat.dialog.damage.title": "Daño",
   "macros.combat.dialog.psychic.damageModifier.title": "Modificador al daño",
   "macros.combat.dialog.damageDeal.title": "Daño hecho",
+  "macros.combat.dialog.resistanceRoll.title": "Tirada de Resistencia",
   "macros.combat.dialog.defend.title": "Defensa",
   "macros.combat.dialog.defender.title": "Defensor",
   "macros.combat.dialog.defenderCustomModifier.title": "Modificador personalizado de la defensa",
@@ -701,7 +702,12 @@
   "macros.combat.dialog.defenseType.title": "Tipo de defensa",
   "macros.combat.dialog.difference.title": "Diferencia de totales",
   "macros.combat.dialog.dodgeButton.title": "Intentar esquivar",
-  "macros.combat.dialog.dodgeValue.title": "Valor de esquiva",
+  "macros.combat.dialog.dodgeValue.title": "Defensa",
+  "macros.combat.dialog.rolling.title": "Tirada de Dado",
+  "macros.combat.dialog.rollValue.title": "Valor base",
+  "macros.combat.dialog.rollSent.title": "Tirada enviada. Esperando a los resultados del combate...",
+  "macros.combat.dialog.rollButton.title": "Tirar Dado",
+  "macros.combat.dialog.waitingRollRequest.title": "Solicitud de tirada enviada. Esperando a los resultados...",
   "macros.combat.dialog.error.alreadyInCombat.title": "Tu petición de ataque ha sido rechazada debido a que el GM ya se encuentra en un combate. Espera a tu turno e intentalo de nuevo.",
   "macros.combat.dialog.error.cannotAttackYourself.title": "No puedes atacarte a ti mismo",
   "macros.combat.dialog.error.multipleTargets.title": "Sólo puedes seleccionar un objetivo",
@@ -742,7 +748,7 @@
   "macros.combat.dialog.physicalAttack.unarmed.title": "Intenta golpear, desarmado, a {target}",
   "macros.combat.dialog.physicalDefense.block.title": "Intenta bloquear el ataque {target}",
   "macros.combat.dialog.physicalDefense.dodge.title": "Intenta esquivar el ataque {target}",
-  "macros.combat.dialog.physicalDefense.resist.title": "Intenta resistir el ataque de {target}",
+  "macros.combat.dialog.physicalDefense.resist.title": "Intenta resistir una prueba de {check}",
   "macros.combat.dialog.physicalDefense.characteristic.title": "Se enfrenta a {target}",
   "macros.combat.dialog.psychicAttack.title": "Ataca con el poder mental {power} a {target} con un potencial de {potential}",
   "macros.combat.dialog.psychicDefense.title": "Se defiende con el poder mental {power} de {target}",
@@ -817,8 +823,8 @@
   "macros.combat.dialog.specificAttack.targeted.title": "Apuntado",
   "macros.combat.dialog.weapon.critic.title": "Crítico",
   "macros.combat.dialog.weapon.title": "Arma",
-  "macros.combat.dialog.weaponAttack.title": "Ataque del arma",
-  "macros.combat.dialog.weaponQuality.title": "Calidad del arma",
+  "macros.combat.dialog.weaponAttack.title": "Ataque",
+  "macros.combat.dialog.weaponQuality.title": "Calidad",
   "macros.combat.dialog.weaponRow.attack.title": "{name} con ataque de {value}",
   "macros.combat.dialog.weaponRow.defense.title": "{name} con defensa de {value}",
   "macros.combat.dialog.weaponUsed.title": "Arma",
