revamp - oppousedCheckRoll, CriticRoll, ResistanceRoll - with sockets

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -676,11 +676,13 @@
   "macros.combat.dialog.combatMod.surprised.title": "Surprised",
   "macros.combat.dialog.counterAttackBonus.title": "Counterattack bonus",
   "macros.combat.dialog.counterAttackButton.title": "Counterattack",
+  "macros.combat.dialog.criticRollButton.title": "Roll Critic",
   "macros.combat.dialog.rollResistanceButton.title": "Roll Resistance",
-  "macros.combat.dialog.rollCharacteristicButton.title": "Roll Characteristic",
+  "macros.combat.dialog.rollOppousedCheckButton.title": "Roll Characteristic",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "This option will execute a new attack from the defender",
-  "macros.combat.dialog.rollResistanceButtonTooltip.title": "This option will execute a new roll from the defender",
-  "macros.combat.dialog.rollCharacteristicButtonTooltip.title": "This option will execute a new roll opposed roll of characteristics",
+  "macros.combat.dialog.criticRollButtonTooltip.title": "This option will execute a critic roll from the attacker",
+  "macros.combat.dialog.rollResistanceButtonTooltip.title": "This option will execute a resistance roll from the defender",
+  "macros.combat.dialog.rollOppousedCheckButtonTooltip.title": "This option will execute a new roll opposed roll of characteristics",
   "macros.combat.dialog.zeonAccumulated.title": "Zeon accumulated",
   "macros.combat.dialog.castInnate.title": "Cast innate spell",
   "macros.combat.dialog.castPrepared.title": "Cast prepared spell",
@@ -689,7 +691,14 @@
   "macros.combat.dialog.damage.title": "Damage",
   "macros.combat.dialog.psychic.damageModifier.title": "Damage modifier",
   "macros.combat.dialog.damageDeal.title": "Damage deal",
+  "macros.combat.dialog.criticRoll.title": "Critic Roll",
   "macros.combat.dialog.resistanceRoll.title": "Resistance Roll",
+  "macros.combat.dialog.oppousedCheckRoll.title": "Oppoused Check Roll",
+  "macros.combat.dialog.oppousedCheck.characteristic.title": "Characteristic",
+  "macros.combat.dialog.oppousedCheck.characteristic.special.title": "Special",
+  "macros.combat.dialog.oppousedCheck.characteristic.strength.title": "Strength",
+  "macros.combat.dialog.oppousedCheck.characteristic.agility.title": "Agility",
+  "macros.combat.dialog.oppousedCheck.characteristic.dexterity.title": "Dexterity",
   "macros.combat.dialog.defend.title": "Defense",
   "macros.combat.dialog.defender.title": "Defender",
   "macros.combat.dialog.defenderCustomModifier.title": "Defender custom modifier",
@@ -706,6 +715,9 @@
   "macros.combat.dialog.dodgeButton.title": "Try to dodge",
   "macros.combat.dialog.dodgeValue.title": "Dodge value",
   "macros.combat.dialog.rolling.title": "Roll Check",
+  "macros.combat.dialog.rolling.oppousedCheck.title": "Oppoused Check",
+  "macros.combat.dialog.rolling.critic.title": "Critic",
+  "macros.combat.dialog.rolling.resistance.title": "Resistance",
   "macros.combat.dialog.rollValue.title": "Base Value",
   "macros.combat.dialog.rollSent.title": "Roll sent. Waiting for combat results...",
   "macros.combat.dialog.rollButton.title": "Roll",
@@ -748,8 +760,8 @@
   "macros.combat.dialog.physicalAttack.unarmed.title": "Try to hit, unarmed, to {target}",
   "macros.combat.dialog.physicalDefense.block.title": "Try to block the attack from {target}",
   "macros.combat.dialog.physicalDefense.dodge.title": "Try to dodge the attack from {target}",
-  "macros.combat.dialog.physicalDefense.resist.title": "Try to resist a check of {check}",
-  "macros.combat.dialog.physicalDefense.characteristic.title": "Is facing {target}",
+  "macros.combat.dialog.roll.resistanceRoll.title": "Try to resist a check of {check}",
+  "macros.combat.dialog.roll.oppousedCheckRoll.title": "Rolling Control Check",
   "macros.combat.dialog.psychicAttack.title": "Attacks with the mental power {power} to {target} with {potential} potential",
   "macros.combat.dialog.psychicDefense.title": "Defends with the mental power {power} from {target}",
   "macros.combat.dialog.psychicPotential.title": "Psychic potential",
