--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -674,11 +674,13 @@
   "macros.combat.dialog.combatMod.surprised.title": "Sorprendido",
   "macros.combat.dialog.counterAttackBonus.title": "Bono al contraataque",
   "macros.combat.dialog.counterAttackButton.title": "Contraatacar",
+  "macros.combat.dialog.criticRollButton.title": "Tirada de Crítico",
   "macros.combat.dialog.rollResistanceButton.title": "Tirada de Resistancia",
-  "macros.combat.dialog.rollCharacteristicButton.title": "Tirada de Característica",
+  "macros.combat.dialog.rollOppousedCheckButton.title": "Tirada de Característica",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "Esta opción permitirá al defensor realizar un contraataque directamente",
+  "macros.combat.dialog.criticRollButtonTooltip.title": "Esta opción enviara una tirada de crítico",
   "macros.combat.dialog.rollResistanceButtonTooltip.title": "Esta opción enviara una tirada de resistencia",
-  "macros.combat.dialog.rollCharacteristicButtonTooltip.title": "Esta opción enviara una tirada enfrentada de características",
+  "macros.combat.dialog.rollOppousedCheckButtonTooltip.title": "Esta opción enviara una tirada enfrentada de características",
   "macros.combat.dialog.zeonAccumulated.title": "Zeon acumulado",
   "macros.combat.dialog.castInnate.title": "Lanzar conjuro innato",
   "macros.combat.dialog.castPrepared.title": "Lanzar conjuro preparado",
@@ -687,7 +689,14 @@
   "macros.combat.dialog.damage.title": "Daño",
   "macros.combat.dialog.psychic.damageModifier.title": "Modificador al daño",
   "macros.combat.dialog.damageDeal.title": "Daño hecho",
+  "macros.combat.dialog.criticRoll.title": "Tirada de Crítico",
   "macros.combat.dialog.resistanceRoll.title": "Tirada de Resistencia",
+  "macros.combat.dialog.oppousedCheckRoll.title": "Tirada Enfrentada",
+  "macros.combat.dialog.oppousedCheck.characteristic.title": "Característica",
+  "macros.combat.dialog.oppousedCheck.characteristic.special.title": "Especial",
+  "macros.combat.dialog.oppousedCheck.characteristic.strength.title": "Fuerza",
+  "macros.combat.dialog.oppousedCheck.characteristic.agility.title": "Agilidad",
+  "macros.combat.dialog.oppousedCheck.characteristic.dexterity.title": "Destreza",
   "macros.combat.dialog.defend.title": "Defensa",
   "macros.combat.dialog.defender.title": "Defensor",
   "macros.combat.dialog.defenderCustomModifier.title": "Modificador personalizado de la defensa",
@@ -704,6 +713,9 @@
   "macros.combat.dialog.dodgeButton.title": "Intentar esquivar",
   "macros.combat.dialog.dodgeValue.title": "Defensa",
   "macros.combat.dialog.rolling.title": "Tirada de Dado",
+  "macros.combat.dialog.rolling.oppousedCheck.title": "Control Enfrentado de Característica",
+  "macros.combat.dialog.rolling.critic.title": "Crítico",
+  "macros.combat.dialog.rolling.resistance.title": "Resistencia",
   "macros.combat.dialog.rollValue.title": "Valor base",
   "macros.combat.dialog.rollSent.title": "Tirada enviada. Esperando a los resultados del combate...",
   "macros.combat.dialog.rollButton.title": "Tirar Dado",
@@ -748,8 +760,8 @@
   "macros.combat.dialog.physicalAttack.unarmed.title": "Intenta golpear, desarmado, a {target}",
   "macros.combat.dialog.physicalDefense.block.title": "Intenta bloquear el ataque {target}",
   "macros.combat.dialog.physicalDefense.dodge.title": "Intenta esquivar el ataque {target}",
-  "macros.combat.dialog.physicalDefense.resist.title": "Intenta resistir una prueba de {check}",
-  "macros.combat.dialog.physicalDefense.characteristic.title": "Se enfrenta a {target}",
+  "macros.combat.dialog.roll.resistanceRoll.title": "Intenta resistir una prueba de {check}",
+  "macros.combat.dialog.roll.oppousedCheckRoll.title": "Realiza un Control de Característica",
   "macros.combat.dialog.psychicAttack.title": "Ataca con el poder mental {power} a {target} con un potencial de {potential}",
   "macros.combat.dialog.psychicDefense.title": "Se defiende con el poder mental {power} de {target}",
   "macros.combat.dialog.psychicPotential.title": "Potencial Psíquico",
