--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -460,6 +460,8 @@
   "anima.ui.settings.advancedSettings.fumbles.title": "Rango de Pifia",
   "anima.ui.settings.advancedSettings.openRolls.title": "Rango de Abierta",
   "anima.ui.settings.advancedSettings.title": "Opciones avanzadas",
+  "anima.ui.settings.automationOptions.title": "Opciones de automatización",
+  "anima.ui.settings.automationOptions.calculateFatigueModifier.title": "Calcular penalizador por cansancio",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Redondea hacia abajo en múltiplos de 5. Aplica al daño",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "¿Redondear los daños calculados en múltiplos de 5 hacia la baja?",
   "anima.ui.systemSettings.autoAcceptCombatRequests.title": "Auto aceptar las peticiones de combate",
