--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -461,6 +461,8 @@
   "anima.ui.settings.advancedSettings.fumbles.title": "Marge de Fumble",
   "anima.ui.settings.advancedSettings.openRolls.title": "Marge d'ouverte",
   "anima.ui.settings.advancedSettings.title": "Paramètres avancés",
+  "anima.ui.settings.automationOptions.title": "Automation options",
+  "anima.ui.settings.automationOptions.calculateFatigueModifier.title": "Calculate fatigue modifier",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.hint.title": "Arrondir au multiple de 5. Applicable aux dégâts",
   "anima.ui.systemSettings.roundDamageInMultiplesOf5.title": "Arrondire à la baisse les dégâts (multiple de 5 le plus proche)?",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Dans la gestion du sytème de combat, la case \"Show roll\" sera cochée par défaut en fonction de cette valeur",
