--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -549,6 +549,8 @@
   "anima.ui.tabs.psychic": "Psychic",
   "anima.ui.tabs.secondaries": "Secondaries",
   "anima.ui.tabs.status": "Status",
+  "anima.ui.tabs.zeon": "Pure Zeon",
+  "anima.ui.tabs.preparedSpells": "Prepared Spell",
   "anima.ui.titleSection.title": "Titles",
   "anima.ui.weapons.different.title": "Different / Unarmed",
   "anima.ui.weapons.known.title": "Known",
@@ -846,5 +848,17 @@
   "macros.damageCalculator.dialog.damage.title": "Damage",
   "macros.damageCalculator.dialog.defense.title": "Defense",
   "macros.damageCalculator.dialog.ta.title": "AT",
-  "macros.damageCalculator.dialog.title": "Damage calculator"
+  "macros.damageCalculator.dialog.title": "Damage calculator",
+  "macros.mysticAct.dialog.title": "ACT",
+  "macros.mysticAct.dialog.zeon.title": "Zeon",
+  "macros.mysticAct.dialog.zeonAccumulated.title": "Accumulated Zeon",
+  "macros.mysticAct.dialog.zeonCost.title": "Zeon Cost",
+  "macros.mysticAct.dialog.newSpell.title": "Prepare New Spell",
+  "macros.mysticAct.dialog.actValue.title": "ACT",
+  "macros.mysticAct.dialog.button.fullAct.title": "Full ACT",
+  "macros.mysticAct.dialog.button.partialAct.title": "Partial ACT",
+  "macros.mysticAct.dialog.button.spareAct.title": "Spare ACT",
+  "macros.mysticAct.dialog.spareActConfirm.body.title": "Do you want to make use of the Spare ACT?",
+  "macros.mysticAct.dialog.spareActConfirm.title": "You still have {spareAct} ACT",
+  "macros.mysticAct.dialog.message.title": "Accumulate <b>{act}</b> Zeon"
 }
