--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -549,6 +549,8 @@
   "anima.ui.tabs.mystic": "Místico",
   "anima.ui.tabs.psychic": "Psíquico",
   "anima.ui.tabs.secondaries": "Secundarias",
+  "anima.ui.tabs.zeon": "Zeon Puro",
+  "anima.ui.tabs.preparedSpells": "Preparar Conjuro",
   "anima.ui.titleSection.title": "Títulos",
   "anima.ui.tabs.status": "Estados",
   "anima.ui.weapons.different.title": "Diferente / Desarmado",
@@ -846,5 +848,17 @@
   "macros.damageCalculator.dialog.damage.title": "Daño",
   "macros.damageCalculator.dialog.defense.title": "Defensa",
   "macros.damageCalculator.dialog.ta.title": "TA",
-  "macros.damageCalculator.dialog.title": "Calculadora de daño"
+  "macros.damageCalculator.dialog.title": "Calculadora de daño",
+  "macros.mysticAct.dialog.title": "ACT",
+  "macros.mysticAct.dialog.zeon.title": "Zeon",
+  "macros.mysticAct.dialog.zeonAccumulated.title": "Zeon Acumulado",
+  "macros.mysticAct.dialog.zeonCost.title": "Coste de Zeon",
+  "macros.mysticAct.dialog.newSpell.title": "Preparar nuevo Conjuro",
+  "macros.mysticAct.dialog.actValue.title": "ACT",
+  "macros.mysticAct.dialog.button.fullAct.title": "ACT Plena",
+  "macros.mysticAct.dialog.button.partialAct.title": "ACT Parcial",
+  "macros.mysticAct.dialog.button.spareAct.title": "ACT Excedente",
+  "macros.mysticAct.dialog.spareActConfirm.body.title": "Quieres hacer uso del ACT Excedente",
+  "macros.mysticAct.dialog.spareActConfirm.title": "Aún te quedan {spareAct} de ACT",
+  "macros.mysticAct.dialog.message.title": "Acumula <b>{act}</b> de Zeon"
 }
