--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -860,5 +860,7 @@
   "macros.mysticAct.dialog.button.spareAct.title": "Spare ACT",
   "macros.mysticAct.dialog.spareActConfirm.body.title": "Do you want to make use of the Spare ACT?",
   "macros.mysticAct.dialog.spareActConfirm.title": "You still have {spareAct} ACT",
-  "macros.mysticAct.dialog.message.title": "Accumulate <b>{act}</b> Zeon"
+  "macros.mysticAct.dialog.message.title": "Accumulate <b>{act}</b> Zeon",
+  "macros.dialog.error.multipleSelectedToken.title": "Only can select one token",
+  "macros.dialog.error.noSelectedToken.title": "You don't have selected a token"
 }
