--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -860,5 +860,7 @@
   "macros.mysticAct.dialog.button.spareAct.title": "ACT Excedente",
   "macros.mysticAct.dialog.spareActConfirm.body.title": "Quieres hacer uso del ACT Excedente",
   "macros.mysticAct.dialog.spareActConfirm.title": "Aún te quedan {spareAct} de ACT",
-  "macros.mysticAct.dialog.message.title": "Acumula <b>{act}</b> de Zeon"
+  "macros.mysticAct.dialog.message.title": "Acumula <b>{act}</b> de Zeon",
+  "macros.dialog.error.multipleSelectedToken.title": "Sólo puedes seleccionar un token",
+  "macros.dialog.error.noSelectedToken.title": "No tienes seleccionado a ningún token"
 }
