--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -551,6 +551,7 @@
   "anima.ui.tabs.secondaries": "Secundarias",
   "anima.ui.tabs.zeon": "Zeon Puro",
   "anima.ui.tabs.preparedSpells": "Preparar Conjuro",
+  "anima.ui.tabs.releaseAct": "Liberar",
   "anima.ui.titleSection.title": "Títulos",
   "anima.ui.tabs.status": "Estados",
   "anima.ui.weapons.different.title": "Diferente / Desarmado",
@@ -858,9 +859,14 @@
   "macros.mysticAct.dialog.button.fullAct.title": "ACT Plena",
   "macros.mysticAct.dialog.button.partialAct.title": "ACT Parcial",
   "macros.mysticAct.dialog.button.spareAct.title": "ACT Excedente",
+  "macros.mysticAct.dialog.button.releaseAct.title": "Liberar Zeon",
+  "macros.mysticAct.dialog.button.withstandPain.title": "Resistir Dolor",
   "macros.mysticAct.dialog.spareActConfirm.body.title": "Quieres hacer uso del ACT Excedente",
   "macros.mysticAct.dialog.spareActConfirm.title": "Aún te quedan {spareAct} de ACT",
   "macros.mysticAct.dialog.message.title": "Acumula <b>{act}</b> de Zeon",
   "macros.dialog.error.multipleSelectedToken.title": "Sólo puedes seleccionar un token",
-  "macros.dialog.error.noSelectedToken.title": "No tienes seleccionado a ningún token"
+  "macros.dialog.error.noSelectedToken.title": "No tienes seleccionado a ningún token",
+  "macros.dialog.zeonWithstandPain.succeed.title": "Mantiene la concentración",
+  "macros.dialog.zeonWithstandPain.failed.title": "Pierde la concentración",
+  "macros.dialog.zeonWithstandPain.criticalFail.title": "Pierde los puntos de Zeon Acumulado"
 }
