new feature - calculates Presence, Resistances, Secondaries

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -514,6 +514,9 @@
   "anima.ui.settings.advancedSettings.title": "Opciones avanzadas",
   "anima.ui.settings.automationOptions.title": "Opciones de automatización",
   "anima.ui.settings.automationOptions.calculateFatigueModifier.title": "Calcular penalizador por cansancio",
+  "anima.ui.settings.automationOptions.calculatePresence.title": "Calcular Presencia",
+  "anima.ui.settings.automationOptions.calculateResistances.title": "Calcular Resistencias",
+  "anima.ui.settings.automationOptions.calculateSecondaries.title": "Calcular Secundarias",
   "anima.ui.settings.advancedCharacteristics.zen": "Zen",
   "anima.ui.settings.advancedCharacteristics.inhuman": "Inhumano",
   "anima.ui.settings.advancedCharacteristics.inmaterial": "Inmaterial",
