--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -515,6 +515,9 @@
   "anima.ui.settings.advancedSettings.title": "Advanced Settings",
   "anima.ui.settings.automationOptions.title": "Automation options",
   "anima.ui.settings.automationOptions.calculateFatigueModifier.title": "Calculate fatigue modifier",
+  "anima.ui.settings.automationOptions.calculatePresence.title": "Calculate Presence",
+  "anima.ui.settings.automationOptions.calculateResistances.title": "Calculate Resistances",
+  "anima.ui.settings.automationOptions.calculateSecondaries.title": "Calculate Secondaries",
   "anima.ui.settings.advancedCharacteristics.zen": "Zen",
   "anima.ui.settings.advancedCharacteristics.inhuman": "Inhuman",
   "anima.ui.settings.advancedCharacteristics.inmaterial": "Inmaterial",
