new item maintainedSpells

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -289,6 +289,10 @@
   "anima.ui.mystic.preparedSpells.grade.title": "Grade",
   "anima.ui.mystic.preparedSpells.name.title": "Spell",
   "anima.ui.mystic.preparedSpells.title": "Prepared spells",
+  "anima.ui.mystic.maintainedSpells.innate.title": "Innate?",
+  "anima.ui.mystic.maintainedSpells.maintenanceCost.title": "Cost",
+  "anima.ui.mystic.maintainedSpells.name.title": "Spell",
+  "anima.ui.mystic.maintainedSpells.title": "Maintained spells",
   "anima.ui.mystic.selectedSpells.cost.title": "Cost",
   "anima.ui.mystic.selectedSpells.name.title": "Spell",
   "anima.ui.mystic.selectedSpells.title": "Selected spells",
