--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -78,6 +78,7 @@
   "anima.ui.combat.baseValues.block.title": "Parada",
   "anima.ui.combat.baseValues.dodge.title": "Esquiva",
   "anima.ui.combat.baseValues.extraDamage.title": "Daño extra",
+  "anima.ui.combat.baseValues.criticLevel.title": "Nivel de crítico",
   "anima.ui.combat.baseValues.title": "Valores base",
   "anima.ui.combat.baseValues.wearArmor.title": "Llevar armadura",
   "anima.ui.combat.combatSpecialSkill.title": "Habilidades especiales",
