--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -250,10 +250,8 @@
   "anima.ui.moneySection.gold.title": "Gold",
   "anima.ui.moneySection.silver.title": "Silver",
   "anima.ui.moneySection.title": "Money",
-  "anima.ui.mystic.act.alternative.title": "Alternative",
   "anima.ui.mystic.act.main.title": "Main",
   "anima.ui.mystic.act.title": "ACT",
-  "anima.ui.mystic.innateMagic.alternative.title": "Alternative",
   "anima.ui.mystic.innateMagic.main.title": "Main",
   "anima.ui.mystic.innateMagic.title": "Innate Magic",
   "anima.ui.mystic.magicLevel.spheres.air.title": "Air",
@@ -346,6 +344,7 @@
   "anima.ui.mystic.spell.via.title": "Via / Subvia",
   "anima.ui.mystic.spell.via.war.title": "War",
   "anima.ui.mystic.spell.via.water.title": "Water",
+  "anima.ui.mystic.spell.via.alternative.title": "Alternative",
   "anima.ui.mystic.spellMaintenance.cost.title": "Cost",
   "anima.ui.mystic.spellMaintenance.name.title": "Spell / Creature",
   "anima.ui.mystic.spellMaintenance.title": "Daily maintenances",
@@ -388,6 +387,7 @@
   "anima.ui.psychic.psychicPowers.combatType.none.title": "-",
   "anima.ui.psychic.psychicPowers.combatType.attack.title": "Attack",
   "anima.ui.psychic.psychicPowers.combatType.defense.title": "Defense",
+  
   "anima.ui.psychic.psychicPowers.discipline.telepathy.title": "Telepathy",
   "anima.ui.psychic.psychicPowers.discipline.telekenisis.title": "Telekenisis",
   "anima.ui.psychic.psychicPowers.discipline.pyrokinesis.title": "Pyrokinesis",
@@ -402,6 +402,8 @@
   "anima.ui.psychic.psychicPowers.discipline.light.title": "Light",
   "anima.ui.psychic.psychicPowers.discipline.hypersensitivity.title": "Hypersensitivity",
   "anima.ui.psychic.psychicPowers.discipline.matrixPowers.title": "-",
+  "anima.ui.psychic.psychicPowers.discipline.unknown.title": "Unknown Discipline",
+
   "anima.ui.psychic.psychicPowers.mentalPattern.introversion.title": "Introversion",
   "anima.ui.psychic.psychicPowers.mentalPattern.extroversion.title": "Extroversion",
   "anima.ui.psychic.psychicPowers.mentalPattern.madness.title": "Madness",
