--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -351,6 +351,24 @@
   "anima.ui.psychic.innatePsychicPower.power.title": "Pouvoir",
   "anima.ui.psychic.innatePsychicPower.title": "Pouvoirs Psychiques Innés",
   "anima.ui.psychic.innatePsychicPower.value.title": "Valeur",
+
+  "anima.ui.psychic.psychicPowers.discipline.telepathy.title": "Télépathie",
+  "anima.ui.psychic.psychicPowers.discipline.telekenisis.title": "Télékinésie",
+  "anima.ui.psychic.psychicPowers.discipline.pyrokinesis.title": "Pyrokinésie",
+  "anima.ui.psychic.psychicPowers.discipline.cryokinesis.title": "Cryokinésie",
+  "anima.ui.psychic.psychicPowers.discipline.physicalIncrease.title": "Augmentation physique",
+  "anima.ui.psychic.psychicPowers.discipline.energy.title": "Energie",
+  "anima.ui.psychic.psychicPowers.discipline.telemetry.title": "Télémétrie",
+  "anima.ui.psychic.psychicPowers.discipline.sentient.title": "Sensation",
+  "anima.ui.psychic.psychicPowers.discipline.causality.title": "Causalité",
+  "anima.ui.psychic.psychicPowers.discipline.electromagnetism.title": "Electromagnétisme",
+  "anima.ui.psychic.psychicPowers.discipline.teleportation.title": "Téléportation",
+  "anima.ui.psychic.psychicPowers.discipline.light.title": "Lumière",
+  "anima.ui.psychic.psychicPowers.discipline.hypersensitivity.title": "Hypersensibilité",
+  "anima.ui.psychic.psychicPowers.discipline.matrixPowers.title": "-",
+  "anima.ui.psychic.psychicPowers.discipline.unknown.title": "Unknown Discipline",
+
+
   "anima.ui.psychic.mentalPattern.bonus.title": "Bonus",
   "anima.ui.psychic.mentalPattern.name.title": "Type",
   "anima.ui.psychic.mentalPattern.penalty.title": "Malus",
