Spanish translation for "unknown discipline" added

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -401,6 +401,7 @@
   "anima.ui.psychic.psychicPowers.discipline.teleportation.title": "Teletransporte",
   "anima.ui.psychic.psychicPowers.discipline.light.title": "Luz",
   "anima.ui.psychic.psychicPowers.discipline.hypersensitivity.title": "Hipersensibilidad",
+  "anima.ui.psychic.psychicPowers.discipline.unknown.title": "Disciplina Desconocida",
   "anima.ui.psychic.psychicPowers.discipline.matrixPowers.title": "-",
   "anima.ui.psychic.psychicPowers.mentalPattern.introversion.title": "Introversión",
   "anima.ui.psychic.psychicPowers.mentalPattern.extroversion.title": "Extroversión",
@@ -563,7 +564,7 @@
   "dialogs.continue": "Continuar",
   "dialogs.migrations.title": "Migración disponible",
   "dialogs.migrations.content": "Está a punto de comenzar una migración. Para evitar pérdidas de datos, haga una copia de seguridad de su carpeta de datos antes de continuar. ¿Desea continuar con la migración?",
-  "dialogs.migrations.success":"La migración #{version} <em>\"{title}\"</em> se ha aplicado con éxito.",
+  "dialogs.migrations.success": "La migración #{version} <em>\"{title}\"</em> se ha aplicado con éxito.",
   "dialogs.migrations.error": "La migración #{version} ha fallado con el error:<br>{error}",
   "dialogs.items.advantage.content": "Nombre de la ventaja",
   "dialogs.items.ammo.content": "Nombre de la munición",
